test/TestPhases/namecheck/invalid/wrongEnums.blc
module

enum Color: Color  // rawtype Color is not declared
    Red
    Green
    Blue
end

